# buildtools

./: .bazelrc  .bazelversion  .gitignore  .mailmap  .pre-commit-config.yaml  BUILD.bazel  CODEOWNERS  CONTRIBUTORS  MODULE.bazel  README.md  WARNINGS.md  WORKSPACE  buildtools_settings.json  go.mod  go.sum  launcher.js  main.js  release.sh  status.py  status.sh  update_generated.sh
.bazelci/: presubmit.yml
.github/: pull_request_template.md
.github/workflows/: stale.yml
add_dep/: BUILD.bazel  add_dep.go  adddep.go  bazel.go  color.go  go.mod  go.sum  pipe.go  query.go
api_proto/: BUILD  BUILD.bazel  api.gen.pb.go  api.proto
build_proto/: BUILD  BUILD.bazel  build.gen.pb.go
buildifier/: BUILD  BUILD.bazel  README.md  buildifier.bzl  buildifier.go  buildifier2.go  convert_ast.go  def.bzl  deps.bzl  integration_test.sh  mode_diff.go  runner.bash.template  runner.bat.template  utils.go
buildifier/cmd/: BUILD.bazel
buildifier/config/: BUILD.bazel  attrpolicy.go  attrpolicy_test.go  buildifier.schema.json  config.go  config_test.go  jsonc.go  jsonc_test.go  validation.go
buildifier/integration_tests/: BUILD.bazel  test_allowed_locations.sh  test_formatting.sh  test_json_output.sh  test_lint.sh  test_multifile.sh  test_utils.sh
buildifier/internal/: factory.bzl
buildifier/npm/: BUILD.bazel  package.json  test.js
buildifier/utils/: BUILD.bazel  diagnostics.go  flags.go  tempfile.go  utils.go  utils_test.go
buildifier2/: BUILD.bazel  buildifier2.go  convert_ast.go
buildifier_utils/: BUILD.bazel  utils.go
buildozer/: BUILD  BUILD.bazel  README.md  buildozer_test.sh  def.bzl  deps.bzl  main.go  package.json  runner.bash.template  test_common.sh
buildozer/npm/: BUILD.bazel  index.js  index.ts  package-lock.json  package.json  test.js
bzlenv/: BUILD.bazel  bzlenv.go  bzlenv_test.go
config/: BUILD.bazel  config.go
convertast/: BUILD.bazel  convert_ast.go
core/: BUILD  BUILD.bazel  build_defs.bzl  lex.go  parse.y  parse.y.go  parse_test.go  print.go  print_test.go  quote.go  quote_test.go  rewrite.go  rule.go  syntax.go  tables.go  walk.go
core/testdata/: 016.golden  019.golden  027.golden  043.golden  043.in
deps_proto/: BUILD.bazel  deps.gen.pb.go
differ/: BUILD  BUILD.bazel  diff.go  isatty_darwin.go  isatty_linux.go  isatty_other.go  isatty_windows.go
docs/: attribute-policy-and-test-tuning-design.md
edit/: BUILD.bazel  buildozer.go  buildozer_command_file_test.go  buildozer_test.go  default_buildifier.go  edit.go  edit_test.go  fix.go  fix_test.go  safebuildifier.go  types.go
edit/bzlmod/: BUILD.bazel  bzlmod.go  bzlmod_test.go
edit/safe/: BUILD.bazel  buildifier.go
extra_actions_base_proto/: BUILD.bazel  extra_actions_base.gen.pb.go
file/: BUILD.bazel  file.go
generateTables/: BUILD  generateTables.go
generatetables/: BUILD.bazel  generate_tables.go
labels/: BUILD.bazel  labels.go  labels_test.go
lang/: BUILD  BUILD.bazel  defs.bzl  tables.gen.go
release/: github.sh  npm.sh
tables/: BUILD.bazel  jsonparser.go  jsonparser_test.go  tables.go
tables/testdata/: simple_tables.json
testutils/: BUILD.bazel  diff.go  find.go
unused_deps/: BUILD.bazel  README.md  jar_manifest.go  jar_manifest_test.go  unused_deps.go  unused_deps2.go
utils/: BUILD.bazel  utils.go  utils_test.go
warn/: BUILD.bazel  attr_policy.go  bzlenv.go  bzlenv_test.go  documentation_test.go  macro_analyzer.go  macro_analyzer_test.go  multifile.go  stacktrace.go  types.go  types_test.go  warn.go  warn_api.go  warn_attr_policy.go  warn_attr_policy_test.go  warn_bazel.go  warn_bazel_api.go  warn_bazel_api_test.go  warn_bazel_misc.go  warn_bazel_misc_test.go  warn_bazel_operation.go  warn_bazel_operation_test.go  warn_bazel_syntax.go  warn_bazel_syntax_test.go  warn_bazel_test.go  warn_control_flow.go  warn_control_flow_test.go  warn_cosmetic.go  warn_cosmetic_test.go  warn_deprecated.go  warn_deprecated_ext.go  warn_deprecated_ext_test.go  warn_deprecated_function.go  warn_deprecated_rule.go  warn_deprecated_rule_test.go  warn_deprecated_test.go  warn_docstring.go  warn_docstring_test.go  warn_execution.go  warn_execution_test.go  (+14 more)
warn/docs/: BUILD.bazel  build_defs.bzl  docs.go  docs.pb.go  docs.proto  docs_test.go  warnings.textproto
wspace/: BUILD.bazel  workspace.go  workspace_test.go
