load("@bazel_gazelle//:def.bzl", "gazelle")
load("//buildifier:def.bzl", "buildifier")

exports_files([
    "LICENSE",
    "launcher.js",
])

config_setting(
    name = "windows",
    values = {"cpu": "x64_windows"},
)

filegroup(
    name = "warnings",
    srcs = ["WARNINGS.md"],
    visibility = ["//warn/docs:__pkg__"],
)

test_suite(
    name = "tests",
    tests = [
        "//api_proto:api.gen.pb.go_checkshtest",
        "//build:go_default_test",
        "//build_proto:build.gen.pb.go_checkshtest",
        "//buildifier:buildifier_integration_test",
        "//deps_proto:deps.gen.pb.go_checkshtest",
        "//edit:go_default_test",
        "//extra_actions_base_proto:extra_actions_base.gen.pb.go_checkshtest",
        "//labels:go_default_test",
        "//lang:tables.gen.go_checkshtest",
        "//tables:go_default_test",
        "//warn:go_default_test",
        "//warn/docs:go_default_test",
        "//wspace:go_default_test",
    ],
)

gazelle(
    name = "gazelle",
    prefix = "github.com/bazelbuild/buildtools",
)

buildifier(
    name = "buildifier",
)
