# Keep earlier public labels working by pointing to the new `cmd` subpackage
[alias(
    name = name,
    actual = "//buildifier/cmd:{}".format(name),
    visibility = ["//visibility:public"],
) for name in (
    "buildifier",
    "buildifier-darwin-amd64",
    "buildifier-darwin-arm64",
    "buildifier-linux-amd64",
    "buildifier-linux-arm64",
    "buildifier-linux-riscv64",
    "buildifier-linux-s390x",
    "buildifier-windows-amd64",
    "buildifier-windows-arm64",
)]

exports_files(
    [
        "runner.bash.template",
        "runner.bat.template",
    ],
    visibility = ["//visibility:public"],
)

exports_files(
    [
        "README.md",
    ],
    visibility = ["//buildifier/npm:__pkg__"],
)
