load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["buildifier2.go"],
    importpath = "github.com/bazelbuild/buildtools/buildifier2",
    visibility = ["//visibility:private"],
    deps = [
        "//build:go_default_library",
        "//convertast:go_default_library",
        "@skylark_syntax//syntax:go_default_library",
    ],
)

go_binary(
    name = "buildifier2",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
