load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
      "utils.go",
    ],
    deps = [
        "//build:go_default_library",
    ],
    importpath = "github.com/bazelbuild/buildtools/buildifier_utils",
    visibility = ["//visibility:public"],
)
