load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("//build:build_defs.bzl", "go_proto_checkedin_test")

# gazelle:exclude deps.gen.pb.go

go_proto_checkedin_test(
    src = "deps.gen.pb.go",
)

proto_library(
    name = "blaze_deps_proto",
    srcs = ["deps.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "go_default_library",
    importpath = "github.com/bazelbuild/buildtools/deps_proto",
    proto = ":blaze_deps_proto",
    visibility = ["//visibility:public"],
)
