load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "diff.go",
        "isatty_other.go",
        # When go_library() supports build constraints, add isatty_windows.go
        # here.
    ],
    visibility = ["//visibility:public"],
)
