load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "diff.go",
        "isatty_other.go",
        "isatty_windows.go",
    ],
    importpath = "github.com/bazelbuild/buildtools/v4/differ",
    visibility = ["//visibility:public"],
)
