load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("//build:build_defs.bzl", "go_proto_checkedin_test")

# gazelle:exclude extra_actions_base.gen.pb.go

go_proto_checkedin_test(
    src = "extra_actions_base.gen.pb.go",
)

genrule(
    name = "copy_and_fix",
    srcs = ["@io_bazel//src/main/protobuf:srcs"],
    outs = ["extra_actions_base.proto"],
    cmd = ("SRCS=($(locations @io_bazel//src/main/protobuf:srcs));" +
           "cp $$(dirname $$SRCS)/extra_actions_base.proto $@"),
)

proto_library(
    name = "blaze_proto",
    srcs = ["extra_actions_base.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "go_default_library",
    importpath = "github.com/bazelbuild/buildtools/extra_actions_base_proto",
    proto = ":blaze_proto",
    visibility = ["//visibility:public"],
)
