load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "file",
    srcs = ["file.go"],
    importpath = "github.com/bazelbuild/buildtools/file",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":file",
    visibility = ["//visibility:public"],
)
