load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "generatetables",
    linkstamp = "main",
    srcs = ["generate_tables.go"],
    visibility = ["//visibility:public"],
    deps = [
        "//build_proto:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)
