load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "generatetables_lib",
    srcs = ["generate_tables.go"],
    importpath = "github.com/bazelbuild/buildtools/generatetables",
    visibility = ["//visibility:private"],
    deps = [
        "//build_proto",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)

go_binary(
    name = "generatetables",
    embed = [":generatetables_lib"],
    visibility = ["//visibility:public"],
)
