load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "labels",
    srcs = ["labels.go"],
    importpath = "github.com/bazelbuild/buildtools/labels",
    visibility = ["//visibility:public"],
)

go_test(
    name = "labels_test",
    srcs = ["labels_test.go"],
    embed = [":labels"],
)

alias(
    name = "go_default_library",
    actual = ":labels",
    visibility = ["//visibility:public"],
)
