load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "warn",
    srcs = [
        "multifile.go",
        "types.go",
        "warn.go",
        "warn_bazel.go",
        "warn_bazel_api.go",
        "warn_bazel_operation.go",
        "warn_control_flow.go",
        "warn_cosmetic.go",
        "warn_deprecated.go",
        "warn_docstring.go",
        "warn_load.go",
        "warn_macro.go",
        "warn_naming.go",
        "warn_operation.go",
        "warn_visibility.go",
    ],
    importpath = "github.com/bazelbuild/buildtools/warn",
    visibility = ["//visibility:public"],
    deps = [
        "//build",
        "//bzlenv",
        "//edit",
        "//edit/bzlmod",
        "//labels",
        "//tables",
    ],
)

go_test(
    name = "warn_test",
    size = "small",
    srcs = [
        "types_test.go",
        "warn_bazel_api_test.go",
        "warn_bazel_operation_test.go",
        "warn_bazel_test.go",
        "warn_control_flow_test.go",
        "warn_cosmetic_test.go",
        "warn_deprecated_test.go",
        "warn_docstring_test.go",
        "warn_load_test.go",
        "warn_macro_test.go",
        "warn_naming_test.go",
        "warn_operation_test.go",
        "warn_test.go",
        "warn_visibility_test.go",
    ],
    embed = [":warn"],
    deps = [
        "//build",
        "//tables",
        "//testutils",
    ],
)

alias(
    name = "go_default_library",
    actual = ":warn",
    visibility = ["//visibility:public"],
)
