load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "wspace",
    srcs = ["workspace.go"],
    importpath = "github.com/bazelbuild/buildtools/wspace",
    visibility = ["//visibility:public"],
    deps = ["//build"],
)

go_test(
    name = "wspace_test",
    size = "small",
    srcs = ["workspace_test.go"],
    embed = [":wspace"],
)

alias(
    name = "go_default_library",
    actual = ":wspace",
    visibility = ["//visibility:public"],
)
