load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "validation.go",
    ],
    importpath = "github.com/bazelbuild/buildtools/buildifier/config",
    visibility = ["//buildifier:__pkg__"],
    deps = [
        "//tables:go_default_library",
        "//warn:go_default_library",
        "//wspace:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["config_test.go"],
    embed = [":go_default_library"],
)
